<resources>
    <string name="app_name">Budgeting Application</string>
    <string name="txt_password">Password</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_login">Please Login</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="title_activity_create_update_user">Create User</string>
    <string name="txt_main_menu">Main Menu</string>
    <string name="txt_manage_budget">Manage Budgets</string>
    <string name="txt_add_new_budget">Add New Budget</string>
    <string name="txt_budget_title">Title of the Budget:</string>
    <string name="txt_add_a_budget">Add a Budget</string>
    <string name="txt_description">Description</string>
    <string name="txt_view_budgets">View Budgets</string>
    <string name="txt_username">userinfo</string>
    <string name="title_activity_view_monthly_budgets">ViewMonthlyBudgetsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txt_title">Title</string>
    <string name="txt_date_created">Date Created</string>
    <string name="txt_manage_this_budget">Manage This Budget</string>
    <string name="txt_user">UserSession</string>
    <string name="tvManageBudgetsLbl">Manage Budgets</string>
    <string name="txt_delete_budget">Delete Budget</string>
    <string name="txt_manage_a_budget">Manage Budget</string>
    <string name="txt_description_lbl">Description</string>
    <string name="txt_title_lbl">Budget Title</string>
    <string name="txt_set_date">Set Date</string>
    <string name="txt_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_recurring">Use Recurring Fields</string>
    <string name="txt_add_bill">Add Bill</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_date_due">Date Due</string>
    <string name="txt_is_recurring">Is Recurring</string>
    <string name="txt_is_paid">Is Paid</string>
    <string name="txt_date_paid">Date Paid</string>
    <string name="txt_select_a_date">Select a Date</string>
    <string name="txt_date_earned">Date Earned</string>
    <string name="txt_set_date_earned">Set Date Earned</string>
    <string name="txt_add_earnings">Add Earning</string>
    <string name="txt_add_earning">Add Earning</string>
    <string name="txt_delete_earning">Delete Earning</string>
    <string name="txt_delete_bill">Delete Bill</string>
    <string name="txt_select_a_month">Select a Month</string>
    <string name="txt_error">Error</string>
    <string name="txt_stats_elb">"Earnings less bills: "</string>
    <string name="txt_sum_of_bills_not_paid">"Sum of bills not paid: "</string>
    <string name="txt_ratio">Earnings to bills ratio: %.2f</string>
    <string name="txt_new_bill">New Bill</string>
    <string name="txt_new_earning">New Earning</string>
    <string name="txt_add_new_user_main">Add User Using Information Above?</string>
    <string name="txt_year">Year</string>
    <string name="txt_month">Month</string>
    <string name="txt_earning_recurring">Recurring</string>
    <string name="not_recurring">Not Recurring</string>
    <string name="txt_update_bill">Update Bill</string>
    <string name="txt_not_recurring">Not recurring</string>
    <string name="txt_recurring_1">Recurring</string>
    <string name="txt_not_paid">Not Paid</string>
    <string name="txt_paid">Paid</string>
    <string name="txt_0">0</string>
</resources>
