<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_title"
        android:id="@+id/tvViewBillTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/tvViewBillDateDue"
        android:layout_toStartOf="@+id/tvViewBillDateDue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_amount"
        android:id="@+id/tvViewBillAmount"
        android:layout_below="@+id/tvViewBillTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/tvViewBillIsRecurring"
        android:layout_toStartOf="@+id/tvViewBillIsRecurring" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_date_due"
        android:id="@+id/tvViewBillDateDue"
        android:layout_alignBottom="@+id/tvViewBillTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_is_recurring"
        android:id="@+id/tvViewBillIsRecurring"
        android:layout_alignBottom="@+id/tvViewBillAmount"
        android:layout_toLeftOf="@+id/tvViewBillIsPaid"
        android:layout_toStartOf="@+id/tvViewBillIsPaid"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_is_paid"
        android:id="@+id/tvViewBillIsPaid"
        android:layout_alignBottom="@+id/tvViewBillIsRecurring"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_date_paid"
        android:id="@+id/tvViewBillDatePaid"
        android:layout_below="@+id/tvViewBillIsRecurring"
        android:layout_alignRight="@+id/tvViewBillIsPaid"
        android:layout_alignEnd="@+id/tvViewBillIsPaid" />

</RelativeLayout>