<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".view.main_menu.MainMenuActivity">

    <TextView
        android:id="@+id/tvMainMenuLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_menu"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btnManageBudgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvMainMenuLbl"
        android:onClick="btnManageBudgets_Click"
        android:text="@string/txt_manage_budget"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnManageBudgets"
        android:labelFor="@+id/etTitle"
        android:text="@string/txt_add_a_budget"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:inputType="textCapWords"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textCapSentences|textAutoComplete|textAutoCorrect|textMultiLine"
        android:maxLines="3"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etTitle"
        android:text="@string/txt_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@id/etDescription"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/txt_budget_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cbRecurringBillsAndEarnings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/cbRecurringBillsAndEarnings"
        android:layout_below="@+id/cbRecurringBillsAndEarnings"
        android:onClick="btnAddBudget_Click"
        android:text="@string/txt_add_new_budget"/>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_username"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <CheckBox
        android:id="@+id/cbRecurringBillsAndEarnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSelectMonth"
        android:checked="false"
        android:text="@string/txt_recurring"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/tvSelectMonth"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/etDescription"

        android:text="@string/txt_select_a_month"

        android:textAppearance="?android:attr/textAppearanceLarge"

        android:background="@drawable/buttonshape"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_alignRight="@+id/etDescription"
        android:layout_alignEnd="@+id/etDescription"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
